Install dependencies of project and create architecture

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
 	"env": {
 		"browser": true,
+		"node": true,
 		"es2021": true
 	},
 	"extends": [
@@ -16,6 +17,7 @@
 		"react"
 	],
 	"rules": {
+		"react/react-in-jsx-scope": "off",
 		"indent": [
 			"error",
 			"tab"
