--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
 		"react/react-in-jsx-scope": "off",
 		"no-unused-labels": "off",
 		"no-unused-vars": "off",
+		"react/prop-types": "off",
 		"indent": [
 			"error",
 			"tab"
