feat: Created component DataGrid

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,12 @@
 		"semi": [
 			"error",
 			"always"
+		],
+		"react/display-name": [
+			"off",
+			{
+				"ignoreTranspilerName": false
+			}
 		]
 	}
 }
