--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"deploy": "npm run build && cd node_modules && cd .bin && npx gh-pages -d ../../build"
 	},
 	"eslintConfig": {
 		"extends": [
